test/types/enum/diten/paramEnumOutOfBounds.good
paramEnumOutOfBounds.chpl:2: error: enum cast out of bounds
