test/types/enum/diten/paramEnumOutOfBounds.chpl
enum enumt { A=1, B=2, C=3 };
var x = 4:enumt;
